<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.csulb.android.tacopronto.OrderActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_radioGroup"

        >


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:text="@string/size_textView"
    android:id="@+id/size_textView"
    android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView"
    android:textSize="16sp"
    android:textStyle="normal|bold"
    android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tortilla_textView"
            android:id="@+id/tortilla_textView"
            android:layout_marginRight="80dp"
            android:layout_marginEnd="80dp"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView"
            android:textStyle="normal|bold"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="RelativeOverlap" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/size_textView"
        android:id="@+id/size_radioGroup"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_radio"
            android:textSize="14sp"
            android:id="@+id/large_radio"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_radio"
            android:textSize="14sp"
            android:id="@+id/medium_radio"/>

    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tortilla_textView"
        android:layout_alignStart="@+id/tortilla_textView"
        android:id="@+id/flour_radiogroup"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corn_radio"
            android:textSize="14sp"
            android:id="@+id/corn_radio"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flour_radio"
            android:textSize="14sp"
            android:id="@+id/flour_radio"/>
    </RadioGroup>
</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_radioGroup"
        android:id="@+id/layout_fillings"
        android:paddingTop="@dimen/activity_vertical_margin"
        >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fillings_textView"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fadingEdge="horizontal|vertical"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/fillings_textView"/>

    <GridView
        android:id="@+id/gridview_fillings"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:columnWidth="90dp"
        android:numColumns="2"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_below="@id/fillings_textView"
        android:scrollbars="none"
        android:nestedScrollingEnabled="false"
        tools:ignore="NestedScrolling" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_fillings"
        android:id="@+id/layout_beverage"
       >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beverage_textView"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="16sp"
        android:fadingEdge="horizontal|vertical"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/beverage_textView"/>

        <GridView
        android:id="@+id/gridview_beverage"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:columnWidth="90dp"
        android:numColumns="2"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/beverage_textView"
        tools:ignore="NestedScrolling"
            android:scrollbars="none"
        />
    </RelativeLayout>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/placeOrder_button"
    android:text="@string/placeOrder_button"
    android:layout_below="@+id/layout_beverage"
    android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/msg_textView"
        android:layout_below="@id/placeOrder_button"/>

</RelativeLayout>
</ScrollView>
